api_produto/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-produto
  labels:
    name: api-produto
    environment: production
