api_produto/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-produto-service
  namespace: api-produto
  labels:
    app: api-produto
spec:
  type: LoadBalancer
  selector:
    app: api-produto
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
